backport `Road logic` for 1.20.1 [Fabric]